<resources>
    <string name="app_name">Lost &amp; Found</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <!--menu items-->
    <string name="menu_item_lost">Lost</string>
    <string name="menu_item_found">Found</string>
    <string name="menu_item_my_posts">My Posts</string>
    <string name="menu_item_notifications">Notifications</string>
    <string name="menu_item_help_and_feedback">Help &amp; Feedback</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_search">Search</string>
    <!-- drawer description -->
    <string name="drawer_open_description">Undefined</string>
    <string name="drawer_close_description">Undefined</string>
    <!-- report object interface-->
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_lost_position">Where you lost it</string>
    <string name="hint_lost_detailed_position">Detailed position</string>
    <string name="hint_found_position">Where you found it</string>
    <string name="hint_found_detailed_position">Detailed position</string>
    <string name="hint_how_to_get_it">How can owner get it</string>
    <string name="hint_search_lost">Type and Search Lost reports</string>
    <string name="hint_search_found">Type and Search Found reports</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_select">Select</string>
    <string name="btn_pin">Pin locations on map</string>
    <string name="btn_done">Done</string>
    <string name="btn_lost_reports">Lost Reports</string>
    <string name="btn_found_reports">Found Reports</string>
    <string name="txt_from">From</string>
    <string name="txt_to">To</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_account">Please select a Google account to login.</string>
    <string name="permission_accounts_rationale">We need to use your Google account to auhtenticate your identity.</string>
    <string name="permission_accounts_denied">Login failed because we can not access Google account.</string>
    <string name="title_activity_detail_lost">DetailLostActivity</string>
    <string name="title_activity_detail_found">DetailFoundActivity</string>
    <string name="title_activity_select_search">SelectSearchActivity</string>
    <string name="title_activity_search_report">SearchReportActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- failure messages-->
    <string name="failure_search">The search functions is not availabe.</string>
    <string name="failure_log_out">Log out failed.</string>
    <string name="failure_update">Update failed.</string>
    <!-- progress dialog-->
    <string name="progress_dialog_title_update">Updateing ...</string>
    <string name="progress_dialog_message_please_wait">Please wait ...</string>
    <!-- MyPost setTag -->
    <string name="tag_report_id">tagReportId</string>
    <string name="tag_is_lost_report">tagIsLostReport</string>
</resources>
