<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group1"
        android:checkableBehavior="all">
        <item
            android:id="@+id/menu_item_lost"
            android:icon="@drawable/ic_mood_bad_black_24dp"
            android:title="@string/menu_item_lost"/>

        <item
            android:id="@+id/menu_item_found"
            android:icon="@drawable/ic_wb_incandescent_black_24dp"
            android:title="@string/menu_item_found"/>

        <item
            android:id="@+id/menu_item_my_posts"
            android:icon="@drawable/ic_my_posts_black_24dp"
            android:title="@string/menu_item_my_posts"/>


    </group>

    <group
        android:id="@+id/menu_group2"
        android:checkableBehavior="all">

        <item
            android:id="@+id/menu_item_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_item_help_and_feedback"/>

        <item
            android:id="@+id/menu_item_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_item_settings"/>
    </group>
</menu>
