<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="edu.gatech.cc.lostandfound.mobile.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:transitionName="actionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <ScrollView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_centerHorizontal="true"
            android:clipToPadding="false"
            android:paddingBottom="88dp"
            android:paddingTop="16dp"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/report_lost_margin_bottom">
                    <ImageView
                        android:layout_width="@dimen/report_lost_icon_width"
                        android:layout_height="@dimen/report_lost_icon_height"
                        android:layout_margin="@dimen/report_lost_icon_margin"
                        android:background="@drawable/ic_card_giftcard_black_24dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/usernameWrapper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/report_lost_margin_end">

                            <EditText
                                android:id="@+id/title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none"
                                android:hint="@string/hint_title"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/usernameWrapper2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/report_lost_margin_end">

                            <EditText
                                android:id="@+id/description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none"
                                android:hint="@string/hint_description"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/report_lost_margin_bottom">
                    <ImageView
                        android:layout_width="@dimen/report_lost_icon_width"
                        android:layout_height="@dimen/report_lost_icon_height"
                        android:layout_margin="@dimen/report_lost_icon_margin"
                        android:background="@drawable/ic_camera_alt_black_24dp"/>
                    <ImageView
                        android:id="@+id/objectImage"
                        android:layout_width="@dimen/report_lost_image_width"
                        android:layout_height="@dimen/report_lost_image_height"
                        android:layout_marginEnd="@dimen/report_lost_margin_end"
                        android:background="@drawable/img_no_image_found"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/cameraBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_camera"
                            style="@android:style/Widget.Material.Light.Button"/>
                        <Button
                            android:id="@+id/selectBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_select"
                            style="@android:style/Widget.Material.Light.Button"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/report_lost_margin_bottom">
                    <ImageView
                        android:layout_width="@dimen/report_lost_icon_width"
                        android:layout_height="@dimen/report_lost_icon_height"
                        android:layout_margin="@dimen/report_lost_icon_margin"
                        android:background="@drawable/ic_access_time_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/report_lost_margin_end">

                            <EditText
                                android:id="@+id/date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="date"
                                android:focusable="false"
                                android:hint="@string/hint_date"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/report_lost_margin_end">

                            <EditText
                                android:id="@+id/time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="time"
                                android:focusable="false"
                                android:hint="@string/hint_time"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/report_lost_margin_bottom">
                    <ImageView
                        android:layout_width="@dimen/report_lost_icon_width"
                        android:layout_height="@dimen/report_lost_icon_height"
                        android:layout_margin="@dimen/report_lost_icon_margin"
                        android:background="@drawable/ic_pin_drop_black_24dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/report_lost_margin_end">

                            <EditText
                                android:id="@+id/position"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none"
                                android:focusable="false"
                                android:hint="@string/hint_found_position"/>
                        </android.support.design.widget.TextInputLayout>
                        <Button
                            android:id="@+id/pinBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_pin"/>
                    </LinearLayout>
                </LinearLayout>

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/doneBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/btn_done"
                        style="@android:style/Widget.Material.Button.Borderless.Colored"
                        android:textSize="20sp"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="72dp" />
</android.support.design.widget.CoordinatorLayout>

