<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:transitionName="actionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <ScrollView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_centerHorizontal="true"
            android:clipToPadding="false"
            android:paddingBottom="88dp"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_card_giftcard_black_24dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/titleEdit"
                                android:maxLength="140"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textNoSuggestions"
                                android:hint="@string/hint_title"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/descriptionEdit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textNoSuggestions"
                                android:hint="@string/hint_description"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_access_time_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/timeCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="I really don't remember when I lost it."/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/dateEdit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="date"
                                android:focusable="false"
                                android:hint="@string/hint_date"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/timeEdit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="time"
                                android:focusable="false"
                                android:hint="@string/hint_time"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_pin_drop_black_24dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/positionCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="I really don't remember where I lost it."/>

                        <fragment
                            android:id="@+id/map"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:adjustViewBounds="true"
                            class="com.google.android.gms.maps.MapFragment"/>

                        <Button
                            android:id="@+id/changePosBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@android:style/Widget.Material.Button.Borderless"
                            android:text="Change location"/>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/doneBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_done"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:textAppearance="@android:style/TextAppearance.Material.Large"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="72dp" />
</android.support.design.widget.CoordinatorLayout>

